# Edge-aware-3D-reconstruction

./: CMakeLists.txt  OpenEDGE_pipeline.py  README.md
src/: CMakeLists.txt  G2OEngine.cpp  G2OEngine.hpp  G2O_BA_process.cpp  main_GlobalSfM.cpp  sfm_data_BA.cpp  sfm_data_BA.hpp  slope_manager.cpp  slope_manager.hpp
src/openMVG_utils/: main_ComputeSfM_DataColor.cpp  main_evalQuality.cpp  main_exportTracks.cpp
src/utils/: image_converter.cpp
